# ARM-Kernel-hhuOS

./: CMakeLists.txt  LICENSE  README.md  myos.elf
boot/: boot.asm  crti.c
linker/: script.ld
src/devices/: timer.hpp
src/devices/peripherals/: gic.hpp  stdio.hpp  uart.cpp  uart.hpp
src/devices/registers/: CNTV_CTL_EL0.hpp  CNTV_CVAL_EL0.hpp  CNTV_TVAL_EL0.hpp  TPIDR_EL0.hpp  TPIDR_EL1.hpp
src/devices/registers/base/: defines.hpp
src/kernel/: allocator.hpp  dispatcher.hpp  interrupts.cpp  os.hpp  scheduler.hpp  svc.hpp  thread.hpp
src/kernel/allocator/: BumpAllocator.hpp  LinkedListAllocator.hpp  addresses.hpp
src/lib/: algorithm.hpp  iostream.hpp  istream.hpp  iterator.hpp  list.hpp  mutex.hpp  ostream.hpp  queue.hpp  ringBuffer.hpp  semaphore.hpp  streambuf.hpp  string.hpp  thread.hpp
src/user/: console.cpp  consumer.cpp  counter.cpp  counterEndless.cpp  idle.cpp  producer.cpp  semaphoreDemo.cpp
